switching to arraylist